syntax = "proto3";

package get_optimum;

service OptimumNodeService {
  // Countdown with server stream
  rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse);
}


message SubscribeRequest {
  string topic = 1;
}

message SubscribeResponse {
  string message_id = 1;
  string topic = 2;
  bytes message = 3;
  string source_node_id = 4;
}

